tests/rosetta/out/C/consecutive-primes-with-ascending-or-descending-differences.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:36Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:36Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int LIMIT = 999999;

list_int primesUpTo(int n) {
  list_int sieve = {0, NULL};
  int i = 0;
  while (i <= n) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = 1;
    list_int tmp2 = concat_list_int(sieve, tmp1);
    sieve = tmp2;
    i = i + 1;
  }
  int p = 2;
  while (p * p <= n) {
    if (sieve.data[p]) {
      int m = p * p;
      while (m <= n) {
        sieve.data[m] = 0;
        m = m + p;
      }
    }
    p = p + 1;
  }
  list_int res = list_int_create(0);
  int x = 2;
  while (x <= n) {
    if (sieve.data[x]) {
      int tmp3_data[1];
      list_int tmp3 = {1, tmp3_data};
      tmp3.data[0] = x;
      list_int tmp4 = concat_list_int(res, tmp3);
      res = tmp4;
    }
    x = x + 1;
  }
  return res;
}

int longestSeq(char *dir) {
  int pd = 0;
  list_int tmp5 = list_int_create(1);
  tmp5.data[0] = 2;
  list_int longSeqs_data[] = {tmp5};
  list_list_int longSeqs = {1, longSeqs_data};
  list_int currSeq = list_int_create(1);
  currSeq.data[0] = 2;
  int i = 1;
  while (i < primes.len) {
    int d = primes.data[i] - primes.data[i - 1];
    if (((strcmp(dir, "ascending") == 0) && d <= pd) ||
        ((strcmp(dir, "descending") == 0) && d >= pd)) {
      if ((1 > longSeqs.data[0].len)) {
        list_int tmp7 = list_int_create(1);
        tmp7.data[0] = 2;
        list_int tmp6 = list_int_create(1);
        tmp6.data[0] = tmp7;
        longSeqs = tmp6;
      } else if ((1 == longSeqs.data[0].len)) {
        list_int tmp8 = list_int_create(1);
        tmp8.data[0] = 2;
        list_list_int tmp9 = list_list_int_create(1);
        tmp9.data[0] = tmp8;
        list_list_int tmp10 = concat_list_list_int(longSeqs, tmp9);
        longSeqs = tmp10;
      }
      list_int tmp11 = list_int_create(2);
      tmp11.data[0] = primes.data[i - 1];
      tmp11.data[1] = primes.data[i];
      currSeq = tmp11;
    } else {
      int tmp12_data[1];
      list_int tmp12 = {1, tmp12_data};
      tmp12.data[0] = primes.data[i];
      list_int tmp13 = concat_list_int(currSeq, tmp12);
      currSeq = tmp13;
    }
    pd = d;
    i = i + 1;
  }
  if (currSeq.len > longSeqs.data[0].len) {
    list_int tmp14_data[] = {currSeq};
    list_list_int tmp14 = {1, tmp14_data};
    longSeqs = tmp14;
  } else if (currSeq.len == longSeqs.data[0].len) {
    list_list_int tmp15 = list_list_int_create(1);
    tmp15.data[0] = currSeq;
    list_list_int tmp16 = concat_list_list_int(longSeqs, tmp15);
    longSeqs = tmp16;
  }
  char *tmp17 = concat_string("Longest run(s) of primes with ", dir);
  char *tmp18 = concat_string(tmp17, " differences is ");
  char *tmp19 = _str(longSeqs.data[0].len);
  char *tmp20 = concat_string(tmp18, tmp19);
  char *tmp21 = concat_string(tmp20, " :");
  printf("%s\n", tmp21);
  for (int tmp22 = 0; tmp22 < longSeqs.len; tmp22++) {
    list_int ls = longSeqs.data[tmp22];
    list_int diffs = list_int_create(0);
    int j = 1;
    while (j < ls.len) {
      diffs = 0;
      j = j + 1;
    }
    int k = 0;
    while (k < ls.len - 1) {
      char *tmp23 = _str(ls.data[k]);
      char *tmp24 = concat_string(tmp23, " (");
      char *tmp25 = _str(diffs.data[k]);
      char *tmp26 = concat_string(tmp24, tmp25);
      char *tmp27 = concat_string(tmp26, ") ");
      printf("%s %s\n", tmp27, (0) ? "true" : "false");
      k = k + 1;
    }
    char *tmp28 = _str(ls.data[ls.len - 1]);
    printf("%s\n", tmp28);
  }
  printf("\n");
}

int mochi_main() {
  printf("For primes < 1 million:\\n\n");
  list_string tmp29 = list_string_create(2);
  tmp29.data[0] = "ascending";
  tmp29.data[1] = "descending";
  for (int tmp30 = 0; tmp30 < 2; tmp30++) {
    char *dir = tmp29.data[tmp30];
    longestSeq(dir);
  }
}

int _mochi_main() {
  list_int primes = primesUpTo(LIMIT);
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
